# Forum-Page-Views-Analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  Main.py  README.md  Text_Functions.py  app.py  main.py  pyproject.toml  requirements.txt  text_functions.py
.github/workflows/: pre-commit.yaml
.streamlit/: config.toml
assets/data/: platform-traffic.csv
assets/images/: .gitkeep
scripts/: __init__.py  synthesize_data.py
styles/: main.css
tests/: __init__.py  test_analytics.py  test_data_loader.py
utils/: __init__.py  analytics.py  data_loader.py  plots.py  text.py
