[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intelligence-flux"
version = "3.0.0"
description = "Interactive traffic analytics dashboard with anomaly detection and geospatial visualization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Elliott Mayson Mayson-Sheridan" }
]
keywords = [
    "streamlit",
    "analytics",
    "visualization",
    "dashboard",
    "traffic-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Streamlit",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.0.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/elliottfairhall/Forum-Page-Views-Analysis"
Repository = "https://github.com/elliottfairhall/Forum-Page-Views-Analysis"

[project.scripts]
synthesize-data = "scripts.synthesize_data:main"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "D",      # pydocstyle
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=utils --cov-report=term-missing"

[tool.coverage.run]
source = ["utils"]
omit = ["tests/*"]
